# slack-norifier-demo

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
src/: schema.py  settings.py
src/controllers/: notify.py
src/models/: client.py
src/views/: console.py  slack.py
templates/: notify.txt  test.txt
tests/: test_settings.py
tests/test_models/: test_client.py
tests/test_views/: test_console.py  test_slack.py
